<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">wwxClock</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="add_alarm">Add alarm</string>
    <string name="play_sound">Play Sound</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="reset">Reset</string>
    <string name="lap">lap</string>
    <string name="_">.</string>

</resources>
