<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.wwx.wwxclock.MainActivity" >

    <TabHost
        android:id="@android:id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <com.wwx.wwxclock.TimeView
                    android:id="@+id/tabTime"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/tvTime"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:gravity="center"
                        android:textAppearance="?android:attr/textAppearanceLarge" />
                </com.wwx.wwxclock.TimeView>

                <com.wwx.wwxclock.AlarmView
                    android:id="@+id/tabAlarm"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <ListView
                        android:id="@+id/lvAlarmList"
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1" >
                    </ListView>

                    <Button
                        android:id="@+id/btnAddAlarm"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/add_alarm" />
                </com.wwx.wwxclock.AlarmView>

                <com.wwx.wwxclock.TimerView
                    android:id="@+id/tabTimer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:orientation="horizontal" >

                   				   							<EditText
                            android:id="@+id/etHour"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:inputType="number"
                            android:singleLine="true"
                            android:textAppearance="?android:attr/textAppearanceLarge" />
                   				   							
                   				  <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            								  android:text=":"
                            android:textAppearance="?android:attr/textAppearanceLarge" />
                        
                        									<EditText
                            android:id="@+id/etMin"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:inputType="number"
                            android:singleLine="true"
                            android:textAppearance="?android:attr/textAppearanceLarge" />
                        		
                        		<TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                           									 android:text=":"
                            android:textAppearance="?android:attr/textAppearanceLarge" />
                        		
                        									<EditText
                            android:id="@+id/etSec"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:inputType="number"
                            android:singleLine="true"
                            android:textAppearance="?android:attr/textAppearanceLarge" />

                    </LinearLayout>
                    <LinearLayout 
                        android:id="@+id/btnGroup"
                        android:orientation="horizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">
                        
                       								 <Button 
                       			 android:id="@+id/btnStart"
                            android:text="@string/start"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"/>
                       								 <Button 
                       			 android:id="@+id/btnPause"                       								     
                            android:text="@string/pause"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"/>
                        							<Button 
                       			 android:id="@+id/btnKeep"                        							    
                            android:text="@string/resume"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"/>
                        							<Button 
                       			 android:id="@+id/btnReset"                        							    
                            android:text="@string/reset"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                </com.wwx.wwxclock.TimerView>

                <com.wwx.wwxclock.StopWatchView
                    android:id="@+id/tabStopWatch"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >
                    
                    <LinearLayout 
                        android:orientation="horizontal"
                        android:layout_width="fill_parent" 
                        android:layout_height="wrap_content">
                        							
                        <TextView
                            android:id="@+id/timeHour"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textAppearance="?android:attr/textAppearanceLarge" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            								  android:text=":"
                            android:textAppearance="?android:attr/textAppearanceLarge" />

                        <TextView
                            android:id="@+id/timeMin"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textAppearance="?android:attr/textAppearanceLarge" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                           									  android:text=":"
                            android:textAppearance="?android:attr/textAppearanceLarge" />

                        <TextView
                            android:id="@+id/timeSec"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textAppearance="?android:attr/textAppearanceLarge" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            								  android:text="."
                            android:textAppearance="?android:attr/textAppearanceLarge" />

                        <TextView
                            android:id="@+id/timeMSec"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textAppearance="?android:attr/textAppearanceLarge" />

                    </LinearLayout>

                    <ListView
                        android:id="@+id/lvWatchTimeList"
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1" >
                    </ListView>
                    
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" >
                       								 <Button
                            android:id="@+id/btnSWStart"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/start" />

                        							<Button
                            android:id="@+id/btnSWPause"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/pause" />

                        							<Button
                            android:id="@+id/btnSWResume"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/resume" />

                        							<Button
                            android:id="@+id/btnSWLap"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/lap" />

                       								 <Button
                            android:id="@+id/btnSWReset"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/reset" />
											</LinearLayout>
                </com.wwx.wwxclock.StopWatchView>
            </FrameLayout>
        </LinearLayout>
    </TabHost>

</RelativeLayout>